[chore] Upgrade to Spark4.0, Java 17, Scala 2.13, Python 3.12.11